--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,17 @@
 @charset 'UTF-8';
 
 html {
-  font-family: sans-serif;
+  font-family: serif;
   touch-action: manipulation;
+  color: #333;
 }
 
+.header img {
+  width: 100%;
+}
 
+.intro {
+  padding: 1em;
+  text-align: center;
+  line-height: 2em;
+}
